--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,20 +14,70 @@ canvas {
 	border: 5px;
 	border-style: solid;
 	position: relative;
+	width: 800px;
+	height: 600px;
 }
 
-.imageContainer {
+
+
+#mainImageContainer {
 	border: 5px;
 	border-style: solid;
 	position: relative;
 	width: 800px;
 	height: 600px;
-	background-image: url("goat.jpg");
+	/*background-image: url("goat.jpg");*/
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
+	float: left;
+}
+.imageContainer {
+	width: 1800px;
+	height: 600px;
 }
 
+.buttonContainer {
+	margin: 0 auto;
+	display: inline;
+	border-color: rgb(250,0,255); 
+	position: relative;
+}
 
+.button {
+	/*http://codepen.io/Pixcils/pen/KfzFL*/
+    border-style: solid;
+    border-width: 0px 0px 3px;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+    color: #FFFFFF;	   
+    border-radius: 6px;
+    cursor: pointer;
+    display: inline-block;
+    font-style: normal;
+    overflow: hidden;
+    text-align: center;
+    text-decoration: none;
+    text-overflow: ellipsis;
+    transition: all 200ms ease-in-out 0s;
+    white-space: nowrap;	
+    font-family: "Gotham Rounded A","Gotham Rounded B",Helvetica,Arial,sans-serif;
+    font-weight: 700;	
+    padding: 19px 39px 18px;
+    font-size: 18px;
+     border-color: #3AC162;
+	background-color: #5FCF80;
+}
+
+#transparentBox {
+	border: 5px;
+	border-style: solid;
+	position: relative;
+	border-color: rgb(250,0,255);
+	width: 100%;
+	height: 100%;
+	background-image:url("transparent.png"); 
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 
 #overlayImage {
 	position: absolute;
