--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,13 @@ canvas {
     border-color: #3AC162;  
 }
 
+#saveLink {
+	font-family: 'Roboto';
+	font-weight: 700;	
+    padding: 10px 40px 18px 10px;
+    font-size: 18px;
+}
+
 #transparentBox {
 	border: 5px;
 	border-style: solid;
