--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ body {
 }
 
 p {
-	font-size: 25px;647 111 2223
+	font-size: 25px;
 }
 
 canvas {
@@ -38,9 +38,9 @@ canvas {
 	border-color: rgb(0,0,255); 
 	border: 1px;
 	border-style: solid;
-	display: flex;
-	position: absolute;
-	
+	display: flex-inline;
+	position: relative;
+	float: left;
 }
 
 .button {
@@ -90,16 +90,13 @@ canvas {
     font-size: 18px;
 }
 
-#transparentBox {
-	border: 5px;
-	border-style: solid;
-	position: relative;
-	border-color: rgb(250,0,255);
+.sliderContainer {
+	padding: 25px 10px 0px 10px;
+	text-align: center;
+}
+
+#slider {
 	width: 100%;
-	height: 100%;
-	background-image:url("transparent.png"); 
-	background-repeat: no-repeat;
-	background-size: cover;
 }
 
 #overlayImage {
