--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -31,7 +31,7 @@ canvas {
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
 	background-position: center center; 
-	float: center;
+	margin: 0 auto;
 }
 
 
@@ -42,7 +42,7 @@ canvas {
 	border-style: solid;
 	display: flex-inline;
 	position: relative;
-	float: left;
+	margin: 0 auto;
 	width: 360px;
 
 }
