--- a/stylesheet3.css
+++ b/stylesheet3.css
@@ -1,4 +1,5 @@
 
+
 body {
 
 	background-color: #f7f8f9;
@@ -14,18 +15,25 @@ canvas {
 	border: 1px;
 	border-style: solid;
 	position: relative;
-	width: 360px;
-	height: 360px;
+	max-width: 1080px;
+	height: 1080px;
 }
 
+#mainTitleContainer {
+	
+}
 
+#title {
+	font-family: "avenir";
+	font-weight: 100;
+}
 
 #mainImageContainer {
 	border: 1px;
 	border-style: solid;
 	position: relative;
-	width: 360px;
-	height: 360px;
+	max-width: 1080px;
+	height: 1080px;
 	
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
