--- a/stylesheet3.css
+++ b/stylesheet3.css
@@ -14,8 +14,8 @@ canvas {
 	border: 1px;
 	border-style: solid;
 	position: relative;
-	width: 360px;
-	height: 360px;
+	width: 540px;
+	height: 540px;
 }
 
 #mainTitleContainer {
@@ -31,8 +31,8 @@ canvas {
 	border: 1px;
 	border-style: solid;
 	position: relative;
-	width: 360px;
-	height: 360px;
+	width: 540px;
+	height: 540px;
 	
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
@@ -49,6 +49,7 @@ canvas {
 	display: flex-inline;
 	position: relative;
 	float: left;
+	width: 360px;
 
 }
 
@@ -68,8 +69,9 @@ canvas {
     text-overflow: ellipsis;
     transition: all 200ms ease-in-out 0s;
     font-weight: 700;	
-    padding: 10px 40px 18px 10px;
+    padding: 40px 0px;
     font-size: 18px;
+	width: 360px
 
 }
 
@@ -123,3 +125,4 @@ canvas {
 	width: 100%;
 
 }
+
